--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <script src="./cal.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('service-worker.js');
+            navigator.serviceWorker.register('./service-worker.js');
         }
     </script>
 </body>
