service-worker scope fix

--- a/index.html
+++ b/index.html
@@ -53,8 +53,13 @@
     <script src="./cal.js"></script>
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('./service-worker.js');
+            navigator.serviceWorker.register('./service-worker.js', { scope: '/calculator/' }).then(function (registration) {
+                console.log('Service worker registered:', registration);
+            }).catch(function (error) {
+                console.log('Service worker registration failed:', error);
+            });
         }
+
     </script>
 </body>
 
